--- a/templates/client/details.html.twig
+++ b/templates/client/details.html.twig
@@ -3,32 +3,66 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <title>{% block title %}Your Symfony App{% endblock %}</title>
     {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+   <style>
+        /* Apply styles to the table */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+
+        /* Style for table headers */
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        /* Alternating row colors for better readability */
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
     {% endblock %}
-</head>
+</head> 
 <body>
     {% block body %}
-    <h1>Détails du client</h1>
+    <h1>Détails du client :</h1>
   
-        <dl class="row">
-            <dt class="col-sm-3">Nom du client</dt>
-            <dd class="col-sm-9">{{ clients.nom_client }}</dd>
-            <dt class="col-sm-3">Prénom du client</dt>
-            <dd class="col-sm-9">{{ clients.prenom_client }}</dd>
-             <dt class="col-sm-3">adresse_client</dt>
-            <dd class="col-sm-9">{{ clients.adresse_client }}</dd>
-             <dt class="col-sm-3">date_de_naissance</dt>
-            <dd class="col-sm-9">{{ clients.date_de_naissance |date('Y-m-d') }}</dd>
-             <dt class="col-sm-3">situation_familiale</dt>
-            <dd class="col-sm-9">{{ clients.situation_familiale }}</dd>
-            <dt class="col-sm-3">profession</dt>
-            <dd class="col-sm-9">{{ clients.profession }}</dd>
-            {# Add other fields of the client here #}
-        </dl>
+       <table class="table">
+        <tr>
+            <th class="col-sm-3">Attribut</th>
+            <th class="col-sm-9">Valeur</th>
+        </tr>
+        <tr>
+            <td>Nom du client</td>
+            <td>{{ clients.nom_client }}</td>
+        </tr>
+        <tr>
+            <td>Prénom du client</td>
+            <td>{{ clients.prenom_client }}</td>
+        </tr>
+        <tr>
+            <td>Adresse</td>
+            <td>{{ clients.adresse_client }}</td>
+        </tr>
+        <tr>
+            <td>Date de naissance</td>
+            <td>{{ clients.date_de_naissance | date('Y-m-d') }}</td>
+        </tr>
+        <tr>
+            <td>Situation familiale</td>
+            <td>{{ clients.situation_familiale }}</td>
+        </tr>
+        <tr>
+            <td>Profession</td>
+            <td>{{ clients.profession }}</td>
+        </tr>
+        {# Add other fields of the client here #}
+    </table>    
     
 {% endblock %}
 </body>
