--- a/templates/client/detailsDO.html.twig
+++ b/templates/client/detailsDO.html.twig
@@ -11,48 +11,35 @@
 <h1>Liste des Clients</h1>
 
 <div id="clients-container">
-    <?php
-    require_once 'services/ClientService.php';
-
-    
-    $clientService = new ClientService();
-
-   
-    $clients = $clientService->getListeClients();
-
-    
-    foreach ($clients as $client) {
-        echo "<div class='client-item' data-id='{$client->ID_Client}'>";
-        echo "<p><strong>ID_Client:</strong> {$client->ID_Client}</p>";
-        echo "<p><strong>Nom:</strong> {$client->Nom}</p>";
-        echo "<p><strong>Prénom:</strong> {$client->Prenom}</p>";
-        echo "</div>";
-    }
-    ?>
+    {% for client in clients %}
+        <div class='client-item' data-id='{{ client.ID }}'>
+            <p><strong>ID_Client:</strong> {{ client.ID }}</p>
+            <p><strong>Nom:</strong> {{ client.nom_client }}</p>
+            <p><strong>Prénom:</strong> {{ client.prenom_client }}</p>
+        </div>
+    {% endfor %}
 </div>
 
 <div id="details-container"></div>
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script>
-$(document).ready(function() {
- 
-    $('.client-item').click(function() {
-   
-        var clientID = $(this).data('id');
-
+    $(document).ready(function() {
+     
+        $('.client-item').click(function() {
        
-        $.ajax({
-            type: 'POST',
-            url: 'get_client_details.php',
-            data: { clientID: clientID },
-            success: function(response) {
-             
-                $('#details-container').html(response);
-            }
+            var clientID = $(this).data('id');
+
+            $.ajax({
+                type: 'POST',
+                url: 'get_client_details.php', // Adjust the path as needed
+                data: { clientID: ID },
+                success: function(response) {
+                    $('#details-container').html(response);
+                }
+            });
         });
     });
-});
 </script>
 
 </body>
